Version 2.02.182 - 
==============================
  Do not pair cache policy and cache metadata format.

Version 2.02.181 - 01 August 2018
=================================
  Reject conversions on raid1 LVs with split tracked SubLVs.
  Reject conversions on raid1 split tracked SubLVs.
  Fix dmstats list failing when no regions exist.
  Reject conversions of LVs under snapshot.
  Limit suggested options on incorrect option for lvconvert subcommand.

Version 2.02.180 - 19th July 2018
=================================
  Never send any discard ioctl with test mode.
  Fix thin-pool alloc which needs same PV for data and metadata.
  Extend list of non-memlocked areas with newly linked libs.
  Enhance vgcfgrestore to check for active LVs in restored VG.
  lvconvert: provide possible layouts between linear and striped/raid
  Fix unmonitoring of merging snapshots.
  Add missing -l description in fsadm man page.
  Cache can uses metadata format 2 with cleaner policy.
  Avoid showing internal error in lvs output or pvmoved LVs.
  Fix check if resized PV can also fit metadata area.
  Reopen devices RDWR only before writing to avoid udev issues.
  Change pvresize output confusing when no resize took place.
  Fix lvmetad hanging on shutdown.
  Fix mem leak in clvmd and more coverity issues.

Version 2.02.179 - 18th June 2018
=================================
  Allow forced vgchange to lock type none on clustered VG.
  Add the report field "shared".
  Enable automatic metadata consistency repair on a shared VG.
  Fix pvremove force on a PV with a shared VG.
  Fixed vgimportclone of a PV with a shared VG.
  Enable previously disallowed thin/cache commands in shared VGs.
  Enable metadata-related changes on LVs active with shared lock.
  Do not continue trying to use a device that cannot be opened.
  Fix problems opening a device that fails and returns.
  Use versionsort to fix archive file expiry beyond 100000 files.

Version 2.02.178 - 13th June 2018